Fix color of hamburger button on mobile

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -42,7 +42,7 @@
   --scrollbar_hover-thumb-color: var(--color-gray-30);
   /* navbar */
   --navbar-background: var(--color-nbnl-light-gray);
-  --navbar-font-color: var(--color-white);
+  --navbar-font-color: #005f87;
   --navbar-font-size: 0.67rem;
   --navbar_hover-background: var(--color-black);
   --navbar-button-background: var(--color-white);
